@@ -63,8 +63,8 @@ variations of each architecture known as <quote>flavors</quote>.
 </row>
 
 <row>
-  <entry morerows="2">ARM and StrongARM</entry>
-  <entry morerows="2">arm</entry>
+  <entry morerows="4">ARM</entry>
+  <entry morerows="4">arm</entry>
   <entry>Netwinder and CATS</entry>
   <entry>netwinder</entry>
 </row><row>
@@ -73,6 +73,12 @@ variations of each architecture known as <quote>flavors</quote>.
 </row><row>
   <entry>Intel IXP4xx</entry>
   <entry>ixp4xx</entry>
+</row><row>
+  <entry>Marvell Orion</entry>
+  <entry>orion5x</entry>
+</row><row>
+  <entry>Versatile</entry>
+  <entry>versatile</entry>
 </row>
 
 <row>
