@@ -70,6 +70,32 @@ url="&url-arm-cyrius-nslu2;">installation instructions</ulink>.
 </para></listitem>
 </varlistentry>
 
+<varlistentry>
+<term>Orion5x</term>
+<listitem><para>
+
+Orion is a system on a chip (SoC) from Marvell that integrates an ARM CPU,
+Ethernet, SATA, USB, and other functionality in one chip. There are many
+Network Attached Storage (NAS) devices on the market that are based on an
+Orion chip. We currently support the following Orion based devices: <ulink
+url="&url-arm-cyrius-kuroboxpro;">Buffalo Kurobox</ulink>, <ulink
+url="&url-arm-cyrius-mv2120;">HP mv2120</ulink>, <ulink
+url="&url-arm-cyrius-qnap;">QNAP Turbo Station</ulink> (TS-109, TS-209 and
+TS-409).
+
+</para></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>Versatile</term>
+<listitem><para>
+
+The Versatile platform is emulated by QEMU and is therefore a nice way to
+test and run Debian on ARM if you don't have the hardware.
+
+</para></listitem>
+</varlistentry>
+
 </variablelist>
 
 </para>
