@@ -4,6 +4,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   * Remove everything about DECstation since these machines are
     no longer supported.
   * Provide information about all iop32x and orion5x installation media.
+  * Describe Orion and Versatile as supported platforms.
   * Fix the NSLU2 download link.
 
   [ Frans Pop ]
